# FieldWorkArena-GreenAgent

./: .env.sample  .gitignore  Dockerfile  README.md  docker_build.sh  docker_run_scenario.sh  pyproject.toml
.github/.workflows/: publis.yml
benchmark/: all_task_ids.toml  all_task_ids_over_size.toml
benchmark/tasks/group2/: Tasks_1.1.json  Tasks_2.1.json  Tasks_2.2.json  Tasks_2.3.json  Tasks_3.1.json  Tasks_3.2.json  Tasks_3.3.json  Tasks_3.4.json  Tasks_4.1.json  Tasks_4.2.json  Tasks_V2_1.1.json  Tasks_V2_1.2.json  Tasks_V2_2.1.json  Tasks_V2_2.2.json  Tasks_V2_3.1.json  Tasks_V2_3.2.json  Tasks_V2_4.1.json  group2_tasks.py  tasks_demo.json
benchmark/tasks/group3/: create_incident.py
benchmark/tasks/long_horizon/: see_image_and_do.py
scenarios/fwa/: Dockerfile.purple_agent  scenario.toml
scenarios/fwa/purple_agent/: README.md  purple_executor.py  test_agent.py
scenarios/fwa/purple_agent/prompts/: test_purple.yaml
scenarios/fwa/purple_agent/utils/: helpers.py
src/fieldworkarena/: run_scenario.py
src/fieldworkarena/agent/: __init__.py  client.py  common.py  fwa_green_agent.py
src/fieldworkarena/agent/metrics/automatic/: __init__.py  automatic_evaluation.py
src/fieldworkarena/agent/metrics/tasks/: __init__.py  data_source.py  task_loader.py
src/fieldworkarena/agent_core/: client_utils.py  green_executor.py  models.py  purple_client.py
src/fieldworkarena/log/: config.py  fwa_logger.py
tests/: README.md  conftest.py
tests/agent/: test_fwa_green_agent.py
tests/agent/metrics/tasks/: test_data_source.py  test_task_loader.py
tests/fixtures/scenarios/fwa/: scenario.toml
tests/fixtures/scenarios/fwa/benchmark/: all_task_ids.toml
tests/fixtures/scenarios/fwa/benchmark/tasks/group2/: Tasks_1.1.json  Tasks_2.1.json  Tasks_V2_1.1.json  Tasks_V2_2.1.json
tests/fixtures/scenarios/fwa/purple_agent/: test_agent.py
